# agentic-code-search-oss

./: .gitignore  .gitmodules  AGENTS.md  EVALUATION.md  EVALUATION_APPROACHES.md  PRIME_RL_SETUP.md  README.md  README_PRIME_RL_CONFIG.md  README_Training.md  README_agentless.md  README_verifiers.md  VECTOR_SEARCH.md  agentless_localization.py  analyze_swebench_repos.py  cli_semantic_search.py  eval.py  eval.sh  eval_match.sh  eval_results_semantic.jsonl  eval_results_with_semantic.jsonl  eval_results_without_semantic.jsonl  eval_swebench.py  eval_with_mcp.py  inf.sh  matching.py  minimal_agent.py  preindex_swebench.py  pyproject.toml  run_mcp_server.sh  run_mcp_server_training.sh  swe_grep_oss_env.py
.openhands/: mcp_servers.json
.openhands/skills/: semantic-search.md
agent/: minimal_agent.py  tools.py
configs/swe-grep-oss/rl/: infer.toml  orch.toml  train.toml
data/SWE-Gym__SWE-Gym_train/: validation.parquet
data/SWE-bench_Lite_processed/: data-00000-of-00001.arrow  dataset_info.json  state.json
environments/oss_swe_grep/: README.md  oss_swe_grep.py  pyproject.toml
eval/: eval_match.sh  eval_swebench.py  training_based_eval.py
examples/: mcp_agent_example.py  mcp_agent_with_vllm.py  swe_grep_with_semantic.py  vllm_setup.md
logs/: rl_qwen3_8b__5843319.err  rl_qwen3_8b__5843319.out
logs2/: inf__5839210.err  inf__5839210.out
notebooks/: qwen3-4b-rl-eval.ipynb  verifiers-eval-analysis.ipynb
outputs/2025-11-30/00-10-58/.hydra/: hydra.yaml
outputs/2025-11-30/00-49-54/.hydra/: hydra.yaml
outputs/2025-11-30/02-12-21/.hydra/: hydra.yaml
outputs/2025-11-30/15-29-35/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-30/16-52-00/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-11-30/18-00-18/.hydra/: hydra.yaml
outputs/2025-11-30/18-23-18/.hydra/: hydra.yaml
outputs/2025-12-01/00-02-20/.hydra/: config.yaml  hydra.yaml
outputs/evals/swe-grep-oss-env--13point5--swe-grep-4b-deft-music-15-step-120/25ebfa73/: metadata.json  results.jsonl
outputs/evals/swe-grep-oss-env--13point5--swe-grep-4b-deft-music-15-step-120/e6a8432a/: metadata.json
outputs/evals/swe-grep-oss-env--13point5--swe-grep-4b-deft-music-15-step-120/f0819768/: metadata.json  results.jsonl
outputs/evals/swe-grep-oss-env--13point5--swe-grep-4b-deft-music-15-step-140/4f5527bb/: metadata.json  results.jsonl
outputs/evals/swe-grep-oss-env--13point5--swe-grep-4b-deft-music-15-step-140/7133803d/: metadata.json  results.jsonl
outputs/evals/swe-grep-oss-env--13point5--swe-grep-4b-deft-music-15-step-140/83b2c848/: metadata.json  results.jsonl
outputs/evals/swe-grep-oss-env--Qwen--Qwen3-4B/115996a3/: metadata.json  results.jsonl
outputs/evals/swe-grep-oss-env--Qwen--Qwen3-4B/5581e377/: metadata.json
outputs/evals/swe-grep-oss-env--Qwen--Qwen3-4B/8431455b/: metadata.json
outputs/evals/swe-grep-oss-env--Qwen--Qwen3-8B/7d793b1e/: metadata.json
outputs/evals/swe-grep-oss-env--Qwen--Qwen3-8B/d297f7fa/: metadata.json
outputs/evals/swe-grep-oss-env--Qwen--Qwen3-8B/e96a2d1c/: metadata.json
outputs/evals/swe-grep-oss-env--willcb--Qwen3-8B/5cfb4699/: metadata.json  results.jsonl
scripts/: check_result_tool_data.py  clone_repos.py  compare_results.py  preindex_repos.py  quick_test.sh  run_async_training.sh  run_eval_comparison.sh  run_mcp_eval.sh  run_rl.sh  run_training.sh  test_rl_single_gpu.sh  train_with_vector_search.sh  verify_env.py  view_rollouts.py
skyrl-integration/: README.md  local_verifiers_generator.py  prepare_local_dataset.py  run_local_verifiers.sh
skyrl-integration/entrypoints/: main_local_verifiers.py
src/: async_trainer.py  build_dataset.py  constants.py  train.py
src/environments/: sandbox_env.py
src/generator/: code_search_generator.py
src/mcp_server/: semantic_search_server.py  test.py  training_semantic_search_server.py
src/prompts/: prompt_builder.py  system_prompt.py
src/prompts/templates/: default.j2  file_localization.j2  system_message_search.j2
src/rewards/: __init__.py  file_localization.py  max_tokens_check.py  tool_call_count.py
src/tools/: __init__.py  bash.py  result.py  semantic_search.py
src/train/: env.py  workflow.py
src/utils/: dataset.py  get_instance.py  get_result_tool_call.py  parse_patch.py  result_tool_metrics.py  token_counter.py
tests/: test_data_extract_functions_from_patch.py  test_messages.py  test_semantic_search.py  test_single_file_localization.py  test_single_prompt.py
to_remove/: analyze_swebench_repos.py  eval.sh  eval_base_model_semantic.jsonl  inf.sh
utils/: clone_repos.py  get_instance.py  parse_patch.py
