[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "agentic-code-search-oss"
version = "0.1.0"
description = "An open-source implementation of a low-latency agent for code localization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "openhands-tools",
    "openhands-agent-server",
    "openhands-workspace",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv.sources]
openhands-sdk = { workspace = true }
openhands-tools = { workspace = true }
openhands-workspace = { workspace = true }
openhands-agent-server = { workspace = true }

[tool.uv.workspace]
members = [
  "agent-sdk/openhands-sdk",
  "agent-sdk/openhands-tools",
  "agent-sdk/openhands-workspace",
  "agent-sdk/openhands-agent-server",
]